Fixed horizontal scrolling bug

--- a/style.css
+++ b/style.css
@@ -19,13 +19,13 @@ h1, h2, h3, h4, h5, h6 {
     background-position: center;
     background-repeat: no-repeat;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     z-index: 1;
     overflow: hidden;
 }
 
 .hero-dark-cover {
-    height: 100%;
+    height: 100vh;
     width: 100%;
     position: absolute;
     background-color: rgba(0, 0, 0, 0.6);
